# Coq-Type-Classes

./: .gitignore  Applicative.v  Auxilary.v  Foldable.v  Functor.v  Makefile  Monad.v  MonadTrans.v  Monoid.v  README.md  Traversable.v  _CoqProject  dune-project  typeClasses.opam
lib/: Applicative.v  Auxiliary.v  Foldable.v  Functor.v  Monad.v  MonadTrans.v  Monoid.v  Traversable.v  dune
